move url and multivalue boxes to sidebar

--- a/view/common/property-selector.phtml
+++ b/view/common/property-selector.phtml
@@ -42,4 +42,6 @@ $escape = $this->plugin('escapeHtml');
             </ul>
         </li>
     </ul>
+    <a href='#' class='button column-url'><span>Import as URL reference</span></a>
+    <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
 </div>
