--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -60,7 +60,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                     </ul>
                     <ul class='options'>
                         <li class='column-url' style='display:none;'>Import as URL
-                            <input type='hidden' value='' class='column-url' name='column-url[<?php echo $index; ?>]'></input>
+                            <input type='hidden' disabled='disabled' value='1' class='column-url' name='column-url[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
                                     <a aria-label="Remove import as URL" title="Remove import as URL" class="o-icon-delete remove-url" href="#" style="display: inline;"></a>
@@ -68,7 +68,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                             </ul>
                         </li>
                         <li class='column-multivalue' style='display:none;'>Multivalue
-                            <input type='hidden' value='' class='column-multivalue' name='column-multivalue[<?php echo $index; ?>]'></input>
+                            <input type='hidden' disabled='disabled' value='1' class='column-multivalue' name='column-multivalue[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
                                     <a aria-label="Remove multivalue" title="Remove multivalue" class="o-icon-delete remove-multivalue" href="#" style="display: inline;"></a>
