--- a/view/common/property-selector.phtml
+++ b/view/common/property-selector.phtml
@@ -42,6 +42,9 @@ $escape = $this->plugin('escapeHtml');
             </ul>
         </li>
     </ul>
-    <a href='#' class='button column-url'><span>Import as URL reference</span></a>
-    <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
+    <div class='property-mapping options'>
+        <h4>Options</h4>
+        <a href='#' class='button column-url'><span>Import as URL reference</span></a>
+        <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
+    </div>
 </div>
