change column label from Actions to Mapping Options
fix #56

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -35,7 +35,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
             <tr>
                 <th><?php echo $this->translate("CSV Column"); ?></th>
                 <th><?php echo $this->translate("Mappings"); ?></th>
-                <th><?php echo $this->translate("Actions"); ?></th>
+                <th><?php echo $this->translate("Mapping Options"); ?></th>
             </tr>
         </thead>
         <tbody>
