--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -44,6 +44,10 @@ tr.mappable input[type="checkbox"] {
     margin-right: .5em;
 }
 
+td.comment {
+    max-width: 300px;
+}
+
 ul {
     list-style: none;
     margin: 0;
