add interface for mapping to S items
part of #65

--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -41,6 +41,7 @@ $escape = $this->plugin('escapeHtml');
     <div class='property-mapping options'>
         <h4>Options</h4>
         <a href='#' class='button column-url'><span>Import as URL reference</span></a>
+        <a href='#' class='button column-reference'><span>Import as Omeka S Item ID</span></a>
         <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
     </div>
 </div>
