generalize language from ref mapping Item ID to Resource Id
part of #65

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -64,11 +64,11 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                             </ul>
                         </li>
 
-                        <li class='column-reference' style='display:none;'>Import as Omeka S Item ID
+                        <li class='column-reference' style='display:none;'>Import as Omeka S Resource ID
                             <input type='hidden' disabled='disabled' value='1' class='column-reference' name='column-reference[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove import as Omeka S Item ID" title="Remove import as Omeka S Item ID" class="o-icon-delete remove-reference" href="#" style="display: inline;"></a>
+                                    <a aria-label="Remove import as Omeka S Resource ID" title="Remove import as Omeka S Resource ID" class="o-icon-delete remove-reference" href="#" style="display: inline;"></a>
                                 </li>
                             </ul>
                         </li>
