--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -40,6 +40,8 @@ $escape = $this->plugin('escapeHtml');
     </ul>
     <div class='property-mapping options'>
         <h4>Options</h4>
+        <a href='#' class='button language'><span>Set language</span></a>
+        <input id="value-language" class="value-language active" type="text">
         <a href='#' class='button column-url'><span>Import as URL reference</span></a>
         <a href='#' class='button column-reference'><span>Import as Omeka S Resource ID</span></a>
         <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
