--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -87,7 +87,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                             <span class='column-language'></span>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove language" title="Remove language" class="o-icon-delete remove-language" href="#" style="display: inline;"></a>
+                                    <a aria-label="Remove language" title="Remove language" class="o-icon-delete remove-column-language" href="#" style="display: inline;"></a>
                                 </li>
                             </ul>
                         </li>
