remove wrong default language value

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -83,7 +83,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                         </li>
 
                         <li class='column-language' style='display:none;'>Language
-                            <input type='hidden' disabled='disabled' value='1' class='column-language' name='column-language[<?php echo $index; ?>]'></input>
+                            <input type='hidden' disabled='disabled' value='' class='column-language' name='column-language[<?php echo $index; ?>]'></input>
                             <span class='column-language'></span>
                             <ul class="actions">
                                 <li>
