--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -41,7 +41,7 @@ $escape = $this->plugin('escapeHtml');
     <div class='property-mapping options'>
         <h4>Options</h4>
         <a href='#' class='button language'><span>Set language</span></a>
-        <p>Language settings here will override language settings in Basic Import Settings.</p>
+        <p><?php echo $this->translate('This will override language settings in Basic Import Settings.'); ?></p>
         <input id="value-language" class="value-language active" type="text">
         <a href='#' class='button column-url'><span>Import as URL reference</span></a>
         <a href='#' class='button column-reference'><span>Import as Omeka S Resource ID</span></a>
