--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -20,7 +20,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 <th><?php echo $escape($this->translate('Undo?'));?></th>
                 <th><?php echo $this->sortLink($this->translate('Job ID'), 'id');?></th>
                 <th><?php echo $escape($this->translate('Comment'));?></th>
-                <th><?php echo $escape($this->translate('Imported Content'));?></th>
+                <th><?php echo $escape($this->translate('Imported content'));?></th>
                 <th><?php echo $escape($this->translate('Date'));?></th>
                 <th><?php echo $escape($this->translate('Status'));?></th>
                 <th><?php echo $escape($this->translate('Owner'));?></th>
