--- a/view/common/media-sidebar.phtml
+++ b/view/common/media-sidebar.phtml
@@ -1,7 +1,7 @@
 
 <div id='media-import' class='sidebar flags'>
-    <a href='#' class='sidebar-close o-icon-close'><span class='screen-reader-text'>Close Me</span></a>
-    <h3>Media Importing: </h3>
+    <a href='#' class='sidebar-close o-icon-close'><span class='screen-reader-text'><?php echo $this->translate("Close"); ?></span></a>
+    <h3><?php echo $this->translate("Media importing"); ?></h3>
     <ul>
 
     <?php foreach($mediaForms as $type=>$mediaForm): ?>
@@ -13,8 +13,8 @@
     </ul>
     
     <div class='media-mapping options'>
-        <h4>Options</h4>
-        <a href='#' class='button column-multivalue'><span>Use multivalue separator</span></a>
+        <h4><?php echo $this->translate("Options"); ?></h4>
+        <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
     </div>
 
 </div>
