--- a/view/common/resource-class-selector.phtml
+++ b/view/common/resource-class-selector.phtml
@@ -5,11 +5,11 @@ $escape = $this->plugin('escapeHtml');
     <?php if ($text) :?>
     <p><?php echo $escape($text); ?></p>
     <?php else: ?>
-    <p><?php echo $this->translate('Click on a resource class to add it to the mapped Item Types.'); ?></p>
+    <p><?php echo $this->translate('Click on a resource class to add it to the mapped item types.'); ?></p>
     <?php endif; ?>
-    <input type="text" class="selector-filter" placeholder="<?php echo $this->translate('Filter Resource Classes'); ?>">
+    <input type="text" class="selector-filter" placeholder="<?php echo $this->translate('Filter resource classes'); ?>">
     <ul>
-        <li class="show"><?php echo $this->translate('All Resource Classes'); ?>
+        <li class="show"><?php echo $this->translate('All resource classes'); ?>
             <ul>
                 <?php foreach ($vocabularies as $vocabulary): ?>
                 <?php
@@ -29,7 +29,7 @@ $escape = $this->plugin('escapeHtml');
                             data-class-id="<?php echo $escape($class->id()); ?>"
                             data-class-term="<?php echo $escape($class->term()); ?>">
                             <div class="description">
-                                <p class="o-icon-info"><span class="screen-reader-text"><?php echo $this->translate('More Info'); ?></span></p>
+                                <p class="o-icon-info"><span class="screen-reader-text"><?php echo $this->translate('More info'); ?></span></p>
                                 <p class="field-comment"><?php echo $escape($class->comment()); ?></p>
                             </div>
                             <span><?php echo $escape($class->label()); ?></span>
