--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -45,7 +45,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                     <?php if(array_key_exists($index, $automaps)): ?>
                     <?php $property = $automaps[$index]; ?>
                         <li class="mapping" data-property-id="<?php echo $property->id(); ?>">
-                            <span><?php echo $property->label(); ?></span>
+                            <?php echo $property->label(); ?>
                             <ul class="actions">
                                 <li><a aria-label="Remove mapping" title="Remove mapping" class="o-icon-delete remove-mapping" href="#" style="display: inline;"></a></li>
                                 <li><a aria-label="Undo remove mapping" title="Undo remove mapping" class="o-icon-undo restore-mapping" href="#" style="display: none;"></a></li>
