variety of style/layout changes
Especially in the sidebar. Need to see what's the most consistent and happy design. The size of buttons for options isn't yet consistent, so there are probably conversations to have there.

--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -54,6 +54,10 @@ ul.mappings.elements {
     padding: 0;
 }
 
+li {
+    list-style: none;
+}
+
 li.mapping {
     display: flex;
 }
@@ -95,5 +99,9 @@ li.mapping.delete {
 input.value-language[type="text"] {
     display: block;
     margin: 3px;
+}
+
+div.language.options {
+    padding-left: 12px;
 }
 
