--- a/view/common/item-sidebar.phtml
+++ b/view/common/item-sidebar.phtml
@@ -26,8 +26,12 @@
     </ul>
         
     <div class='item-mapping options'>
-        <h4>Options</h4>
-        <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
-        <p><?php echo $this->translate("(Only applies to Item set ID)"); ?></p>
+        <h4><?php echo $this->translate("Options"); ?></h4>
+        <ul>
+            <li>
+                <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
+                <p><?php echo $this->translate("(Only applies to Item set ID)"); ?></p>
+            </li>
+        </ul>
     </div>
 </div>
