--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -39,12 +39,28 @@ $escape = $this->plugin('escapeHtml');
         <?php endforeach; ?>
     </ul>
     <div class='property-mapping options'>
-        <h4>Options</h4>
-        <a href='#' class='button language'><span><?php echo $this->translate("Set language"); ?></span></a>
-        <p><?php echo $this->translate('This will override language settings in Basic Import Settings.'); ?></p>
-        <input id="value-language" class="value-language active" type="text">
-        <a href='#' class='button column-url'><span><?php echo $this->translate("Import as URL reference"); ?></span></a>
-        <a href='#' class='button column-reference'><span><?php echo $this->translate("Import as Omeka S resource ID"); ?></span></a>
-        <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
+        <h4><?php echo $this->translate("Options"); ?></h4>
+        <ul>
+            <li>
+                <ul>
+                    <li>
+                    <a href='#' class='button language'><span><?php echo $this->translate("Set language"); ?></span></a>
+                    <div class='language options'>
+                        <p><?php echo $this->translate('This will override language settings in basic import settings.'); ?></p>
+                        <input id="value-language" class="value-language active" type="text">
+                    </div>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href='#' class='button column-url'><span><?php echo $this->translate("Import as URL reference"); ?></span></a>
+            </li>
+            <li>
+                <a href='#' class='button column-reference'><span><?php echo $this->translate("Import as Omeka S resource ID"); ?></span></a>
+            </li>
+            <li>
+                <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
+            </li>
+        </ul>
     </div>
 </div>
