consilidate JS for options. make remove/restore consistent with other places

--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -74,6 +74,10 @@ li.mapping.delete {
     background-color: #fcc;
 }
 
+li.option.delete {
+    background-color: #fcc;
+}
+
 .sidebar a.button {
     width: 100%
 }
