--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -56,7 +56,6 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                     </ul>
                     <ul class='options'>
                         <li class='column-url option' style='display:none;'><?php echo $this->translate("Import as URL"); ?>
-                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-url[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
                                     <a aria-label="Remove import as URL" title="Remove import as URL" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
@@ -65,10 +64,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                                     <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
+                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-url[<?php echo $index; ?>]'></input>
                         </li>
 
                         <li class='column-reference option' style='display:none;'><?php echo $this->translate("Import as Omeka S resource ID"); ?>
-                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-reference[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
                                     <a aria-label="Remove import as Omeka S Resource ID" title="Remove import as Omeka S Resource ID" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
@@ -77,10 +76,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                                     <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
+                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-reference[<?php echo $index; ?>]'></input>
                         </li>
 
                         <li class='column-multivalue option' style='display:none;'><?php echo $this->translate("Multivalue"); ?>
-                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-multivalue[<?php echo $index; ?>]'></input>
                             <ul class="actions">
                                 <li>
                                     <a aria-label="Remove multivalue" title="Remove multivalue" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
@@ -89,10 +88,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                                     <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
+                            <input type='hidden' disabled='disabled' value='1' class='column-option' name='column-multivalue[<?php echo $index; ?>]'></input>
                         </li>
 
                         <li class='column-language option' style='display:none;'><?php echo $this->translate("Language:"); echo"&nbsp;"; ?>
-                            <input type='hidden' disabled='disabled' value='' class='column-option' name='column-language[<?php echo $index; ?>]'></input>
                             <span class='column-language'></span>
                             <ul class="actions">
                                 <li>
@@ -102,6 +101,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                                     <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
+                            <input type='hidden' disabled='disabled' value='' class='column-option column-language' name='column-language[<?php echo $index; ?>]'></input>
                         </li>
                     </ul>
                 </td>
