--- a/view/common/item-sidebar.phtml
+++ b/view/common/item-sidebar.phtml
@@ -1,7 +1,7 @@
 
 <div id='item-data' class='sidebar flags'>
     <a href='#' class='sidebar-close o-icon-close'><span class='screen-reader-text'><?php echo $this->translate("Close"); ?></span></a>
-    <h3><?php echo $this->translate("Item data"); ?></h3>
+    <h3><?php echo $this->translate("Item data: "); ?></h3>
 
     <p><?php echo $this->translate("Data from this column applies to the entire item being imported."); ?></p>
     <p><?php echo $this->translate("Settings here will override any corresponding settings in Basic import settings."); ?></p>
