--- a/view/common/media-sidebar.phtml
+++ b/view/common/media-sidebar.phtml
@@ -1,7 +1,7 @@
 
 <div id='media-import' class='sidebar flags'>
     <a href='#' class='sidebar-close o-icon-close'><span class='screen-reader-text'><?php echo $this->translate("Close"); ?></span></a>
-    <h3><?php echo $this->translate("Media importing"); ?></h3>
+    <h3><?php echo $this->translate("Media import: "); ?></h3>
     <ul>
 
     <?php foreach($mediaForms as $type=>$mediaForm): ?>
