update multivalue settings

--- a/view/common/media-sidebar.phtml
+++ b/view/common/media-sidebar.phtml
@@ -15,7 +15,7 @@
     <div class='media-mapping options'>
         <h4><?php echo $this->translate("Options"); ?></h4>
             <ul>
-                <li>
+                <li class='column-multivalue'>
                     <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
                 </li>
             </ul>
