--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -120,3 +120,7 @@ div.language.options {
 li.column-multivalue {
     display: flex;
 }
+
+.item-mapping li.column-multivalue {
+    display: block;
+}
