--- a/view/common/item-sidebar.phtml
+++ b/view/common/item-sidebar.phtml
@@ -28,7 +28,7 @@
     <div class='item-mapping options'>
         <h4><?php echo $this->translate("Options"); ?></h4>
         <ul>
-            <li>
+            <li class="column-multivalue">
                 <a href='#' class='button column-multivalue'><span><?php echo $this->translate("Use multivalue separator"); ?></span></a>
                 <p><?php echo $this->translate("(Only applies to Item set ID)"); ?></p>
             </li>
