--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -34,7 +34,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
             <td>
                 <input type='checkbox' name='jobs[]' value='<?php echo $job->id(); ?>' />
             </td>
-            <td><?php echo $job->link($escape($job->id())); ?></td>
+            <td><?php echo $job->link($job->id()); ?></td>
             <td class='comment'>
                 <?php echo $import->comment(); ?>
                 <?php if($import->hasErr()): ?>
