update page title generation

--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -4,7 +4,9 @@ $escapeHtml = $this->plugin('escapeHtml');
 
 ?>
 
-<?php echo $this->pageTitle($this->translate('Import · CSV Import')); ?>
+<?php // echo $this->pageTitle($this->translate('Import · CSV Import')); ?>
+
+<?php echo $this->pageTitle($this->translate("CSV Import"), 1, null, "Import" ); ?>
 
 
 <?php echo $this->form()->openTag($form); ?>
