--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -6,7 +6,9 @@ $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'))
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
 ?>
 
-<?php echo $this->pageTitle($this->translate('Map Elements · CSV Import')); ?>
+<?php // echo $this->pageTitle($this->translate('Map Elements · CSV Import')); ?>
+
+<?php echo $this->pageTitle($this->translate("Map Elements"), 1, "CSV Import" ); ?>
 
 <?php echo $this->form()->openTag($form); ?>
 <fieldset id='page-actions'>
