--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -88,6 +88,7 @@ li.option.delete {
 .sidebar-chooser a.button {
     font-size: 13px;
     margin: 3px 0;
+    width: 100px;
 }
 
 #media-sidebar a {
