--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -42,7 +42,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 <?php endif; ?>
             </td>
             <td>
-                <?php echo $this->translate('Added: ') . $import->addedCount() . ' ' . $import->resourceType(); ?>
+                <?php echo $this->translate('Added: ') . $import->addedCount() . ' ' . $this->translate($import->resourceType()); ?>
             </td>
             <td><?php echo $escape($this->i18n()->dateFormat($job->started())); ?></td>
             <td>
@@ -55,7 +55,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 
                 
             } else {
-                $status = $job->status();
+                $status = $this->translate($job->status());
             } 
             ?>
             <?php echo $status; ?>
