--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -58,10 +58,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                         <li class='column-url option' style='display:none;'><?php echo $this->translate("Import as URL"); ?>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove import as URL" title="Remove import as URL" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Remove import as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Remove import as URL')); ?>" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-url' name='column-url[<?php echo $index; ?>]'></input>
@@ -70,10 +70,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                         <li class='column-reference option' style='display:none;'><?php echo $this->translate("Import as Omeka S resource ID"); ?>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove import as Omeka S Resource ID" title="Remove import as Omeka S Resource ID" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Remove import as Omeka S Resource ID')); ?>" title="<?php echo $escapeHtml($this->translate('Remove import as Omeka S Resource ID')); ?>" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-reference' name='column-reference[<?php echo $index; ?>]'></input>
@@ -82,10 +82,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                         <li class='column-multivalue option' style='display:none;'><?php echo $this->translate("Multivalue"); ?>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove multivalue" title="Remove multivalue" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Remove multivalue')); ?>" title="<?php echo $escapeHtml($this->translate('Remove multivalue')); ?>" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-multivalue' name='column-multivalue[<?php echo $index; ?>]'></input>
@@ -95,10 +95,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                             <span class='column-language'></span>
                             <ul class="actions">
                                 <li>
-                                    <a aria-label="Remove language" title="Remove language" class="o-icon-delete remove-option remove-column-language" href="#" style="display: inline;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Remove language')); ?>" title="<?php echo $escapeHtml($this->translate('Remove language')); ?>" class="o-icon-delete remove-option remove-column-language" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="Undo remove as URL" title="Undo remove as URL" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='' class='column-option column-language' name='column-language[<?php echo $index; ?>]'></input>
@@ -110,8 +110,8 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                         <?php foreach($mappings as $mappingClass): ?>
                         <li>
                             <a href='#'
-                               class='button' 
-                               data-sidebar='<?php echo $this->translate($mappingClass::getName()); ?>' 
+                               class='button'
+                               data-sidebar='<?php echo $this->translate($mappingClass::getName()); ?>'
                                data-column='<?php echo $escapeHtml($column); ?>'><?php echo $this->translate($mappingClass::getLabel()); ?></a>
                         </li>
                         <?php endforeach; ?>
