--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -12,7 +12,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
 
 <form method='POST'>
     <fieldset id='page-actions'>
-        <input type='submit' value='Submit' />
+        <input type="submit" value="<?php echo $escape($this->translate('Submit')); ?>" />
     </fieldset>
     <table class="tablesaw" data-tablesaw-mode="stack">
         <thead>
@@ -52,11 +52,11 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 } else {
                     $status = $this->translate('Undo in progress');
                 }
-                
-                
+
+
             } else {
                 $status = $this->translate($job->status());
-            } 
+            }
             ?>
             <?php echo $status; ?>
             </td>
