--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -3,7 +3,7 @@ $form->prepare();
 $escapeHtml = $this->plugin('escapeHtml');
 ?>
 
-<?php echo $this->pageTitle($this->translate('CSV Import'), 1, $this->translate('Import') ); ?>
+<?php echo $this->pageTitle($this->translate('Import Settings'), 1, $this->translate('CSV Import')); ?>
 
 <?php echo $this->form()->openTag($form); ?>
 <fieldset id='page-actions'>
