--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -54,7 +54,7 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
                     <ul class="mappings elements">
                     <?php if(array_key_exists($index, $automaps)): ?>
                     <?php $property = $automaps[$index]; ?>
-                        <li class="mapping" data-property-id="<?php echo $property->id(); ?>">
+                        <li class="mapping property" data-property-id="<?php echo $property->id(); ?>">
                             <?php echo $this->translate($property->label()); ?>
                             <ul class="actions">
                                 <li><a aria-label="Remove mapping" title="Remove mapping" class="o-icon-delete remove-mapping" href="#" style="display: inline;"></a></li>
